# colibri-mt

./: .travis.yml  Makefile.am  brainstorm  colibrimt.py  configure.ac  setup.py
colibrimt/: alignmentmodel.py  contextmoses.py  evaluation.py  extractskipgrams.py  test.py
include/: Makefile.am  alignmodel.h  decoder.h  gizamodel.h  lm.h
scripts/: colibri-mt-exp.sh  exp-example.sh
src/: Makefile.am  decoder.cpp  gizamodel.cpp  lm.cpp  mosesphrasetable2alignmodel.cpp  test.cpp
test/: bank.train.ok  exp-test.sh  test-en-nl.phrasetable  test-en-nl.phrasetable.sourcedump.ok  test-en-nl.phrasetable.targetdump.ok  test-en-test.txt  test-en-train.txt  test-nl-test.txt  test-nl-train.txt  test.phrasetable  test.py  the+bank.train.ok  train.train.ok
test/model/: moses.ini
