AM_CPPFLAGS = -I@top_srcdir@/include

bin_PROGRAMS = colibri-mosesphrasetable2alignmodel

lib_LTLIBRARIES = libcolibrimt.la 

libcolibrimt_la_CXXFLAGS = -Wall                                                                                                                                                                                                      
libcolibrimt_la_SOURCES = lm.cpp           

colibri_mosesphrasetable2alignmodel_CXXFLAGS = -Wall 
colibri_mosesphrasetable2alignmodel_SOURCES = gzstream.cpp mosesphrasetable2alignmodel.cpp 
